[package]
authors = ["sunli <scott_s829@163.com>"]
categories = ["network-programming", "asynchronous"]
description = "async-graphql for axum"
documentation = "https://docs.rs/async-graphql-axum/"
edition = "2021"
homepage = "https://github.com/async-graphql/async-graphql"
keywords = ["futures", "async", "graphql", "axum"]
license = "MIT OR Apache-2.0"
name = "surrealdb-async-graphql-axum"
repository = "https://github.com/surrealdb/surrealdb-async-graphql-axum"
version = "7.0.7-surrealdb.1"

[dependencies]
tokio-util = { version = "0.7.10", default-features = false, features = [
    "io",
    "compat",
] }
tokio = { version = "1.36.0", features = ["time"] }
tokio-stream = "0.1.15"
tower-service = "0.3"
async-graphql = "7.0.7"
serde_json = "1.0.122"
async-trait = "0.1.81"
futures-util = "0.3.30"
bytes = "1.7.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
axum = { version = "0.7.5", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { version = "0.7.5", features = ["ws"] }
